Let's not forget the dash here...

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,4 +9,4 @@ build:
     - apt -y install valgrind
     - ldconfig
   script: 
-    - ./autogen.sh --enable-memory tests && make -j $(nproc) check
+    - ./autogen.sh --enable-memory-tests && make -j $(nproc) check
