--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -4,6 +4,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/include -DNDEBUG
 EXTRA_PROGRAMS = \
 	flat-segment-tree \
 	flat-segment-tree-itrs \
+	mtv-collection \
 	multi-type-matrix \
 	multi-type-vector \
 	multi-type-vector-element-block1 \
@@ -17,6 +18,7 @@ EXTRA_PROGRAMS = \
 
 flat_segment_tree_SOURCES = flat_segment_tree.cpp
 flat_segment_tree_itrs_SOURCES = flat_segment_tree_itrs.cpp
+mtv_collection_SOURCES = mtv_collection.cpp
 multi_type_matrix_SOURCES = multi_type_matrix.cpp
 multi_type_vector_SOURCES = multi_type_vector.cpp
 multi_type_vector_element_block1_SOURCES = multi_type_vector_element_block1.cpp
@@ -31,6 +33,7 @@ trie_map_SOURCES = trie_map.cpp
 TESTS = \
 	flat-segment-tree \
 	flat-segment-tree-itrs \
+	mtv-collection \
 	multi-type-matrix \
 	multi-type-vector \
 	multi-type-vector-element-block1 \
