--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ enable_testing()
 set(CMAKE_CTEST_COMMAND ctest -V)
 
 if(MSVC)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251 /wd4275 /MP")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251 /wd4275 /wd4244 /MP")
 endif(MSVC)
 
 add_definitions(-DMDDS_UNIT_TEST)
@@ -21,40 +21,7 @@ include_directories(${PROJECT_SOURCE_DIR}/include ${Boost_INCLUDE_DIR})
 
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
 
-add_executable(flat-segment-tree-test EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/flat_segment_tree_test.cpp)
-add_executable(segment-tree-test EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/segment_tree_test.cpp)
-add_executable(rectangle-set-test EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/rectangle_set_test.cpp)
-add_executable(point-quad-tree-test EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/point_quad_tree_test.cpp)
-add_executable(sorted-string-map-test EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/sorted_string_map_test.cpp)
-add_executable(trie-map-test EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/trie_map_test.cpp)
-add_executable(multi-type-matrix-test EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/multi_type_matrix_test.cpp)
-add_executable(multi-type-matrix-test-walk EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/multi_type_matrix_test_walk.cpp)
-add_executable(multi-type-vector-test-collection EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/multi_type_vector_test_collection.cpp)
-add_executable(multi-type-vector-test-custom EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/multi_type_vector_test_custom.cpp)
-add_executable(multi-type-vector-test-default EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/multi_type_vector_test_default.cpp)
-add_executable(multi-type-vector-test-event EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/multi_type_vector_test_event.cpp)
-add_executable(multi-type-vector-test-perf EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/multi_type_vector_test_perf.cpp)
-add_executable(rtree-test EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/rtree_test.cpp)
-add_executable(rtree-test-bulkload EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/rtree_test_bulkload.cpp)
-
-add_test(flat-segment-tree-test flat-segment-tree-test func)
-add_test(segment-tree-test segment-tree-test func)
-add_test(rectangle-set-test rectangle-set-test func)
-add_test(point-quad-tree-test point-quad-tree-test func)
-add_test(sorted-string-map-test sorted-string-map-test func)
-add_test(trie-map-test trie-map-test func)
-add_test(multi-type-matrix-test multi-type-matrix-test func)
-add_test(multi-type-matrix-test-walk multi-type-matrix-test-walk func)
-add_test(multi-type-vector-test-collection multi-type-vector-test-collection func)
-add_test(multi-type-vector-test-custom multi-type-vector-test-custom func)
-add_test(multi-type-vector-test-default multi-type-vector-test-default func)
-add_test(multi-type-vector-test-event multi-type-vector-test-event func)
-#TODO: performance test does not need to be executed by the build.
-#add_test(multi-type-vector-test-perf multi-type-vector-test-perf)
-add_test(rtree-test rtree-test)
-add_test(rtree-test-bulkload rtree-test-bulkload)
-
-add_dependencies(check
+set(_TESTS
     flat-segment-tree-test
     multi-type-matrix-test
     multi-type-matrix-test-walk
@@ -62,7 +29,6 @@ add_dependencies(check
     multi-type-vector-test-custom
     multi-type-vector-test-default
     multi-type-vector-test-event
-    multi-type-vector-test-perf
     point-quad-tree-test
     rectangle-set-test
     rtree-test
@@ -70,6 +36,21 @@ add_dependencies(check
     segment-tree-test
     sorted-string-map-test
     trie-map-test
+)
+
+foreach(_TEST ${_TESTS})
+    set(_TEST_FILE ${_TEST}.cpp)
+    string(REPLACE "-" "_" _TEST_FILE ${_TEST_FILE})
+    add_executable(${_TEST} EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/${_TEST_FILE})
+    add_test(${_TEST} ${_TEST} func)  # not all test programs require a 'func' parameter.
+endforeach()
+
+add_executable(multi-type-vector-test-perf EXCLUDE_FROM_ALL
+    ${PROJECT_SOURCE_DIR}/src/multi_type_vector_test_perf.cpp
+)
+
+add_dependencies(check
+    ${_TESTS}
 )
 
 install(DIRECTORY
