--- a/test/gdb/src/Makefile.am
+++ b/test/gdb/src/Makefile.am
@@ -7,6 +7,7 @@ test_CPPFLAGS = -I$(top_srcdir)/include
 test_SOURCES = \
 	flat_segment_tree.cpp \
 	multi_type_vector.cpp \
+	point_quad_tree.cpp \
 	segment_tree.cpp \
 	sorted_string_map.cpp \
 	test.cpp \
