add pretty printer for rtree

--- a/test/gdb/src/Makefile.am
+++ b/test/gdb/src/Makefile.am
@@ -9,6 +9,7 @@ test_SOURCES = \
 	multi_type_matrix.cpp \
 	multi_type_vector.cpp \
 	point_quad_tree.cpp \
+	rtree.cpp \
 	segment_tree.cpp \
 	sorted_string_map.cpp \
 	test.cpp \
