--- a/include/mdds/Makefile.am
+++ b/include/mdds/Makefile.am
@@ -23,6 +23,7 @@ headers_HEADERS = \
 	quad_node.hpp \
 	rectangle_set_def.inl \
 	rectangle_set.hpp \
+	ref_pair.hpp \
 	rtree.hpp \
 	rtree_def.inl \
 	segment_tree_def.inl \
