--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,48 @@
+*.gcda
+*.gcno
 *.log
 *.mem
-*.trs
 *.o
 *.obj
 *.py[co]
-*.gcda
-*.gcno
+*.trs
+*.vpwhist
+*.vpwhistu
+*.vtg
 .deps/
 .dirstamp
-__pycache__
 Makefile
 Makefile.in
+__pycache__
 aclocal.m4
 autom4te.cache/
 config.log
 config.status
 configure
 depcomp
+doc/_build
+doc/_doxygen
+example/*.svg
+example/cities.bin
+example/flat-segment-tree
+example/flat-segment-tree-itrs
+example/mtv-collection
+example/multi-type-matrix
+example/multi-type-vector
+example/multi-type-vector-element-block1
+example/multi-type-vector-event1
+example/multi-type-vector-pos-hint
+example/packed-trie-map
+example/packed-trie-state-custom
+example/packed-trie-state-int
+example/point-quad-tree
+example/rtree-erase
+example/rtree-medium
+example/rtree-medium-bulkload
+example/rtree-simple
+example/segment-tree
+example/trie-map
+example/us-presidents.bin
 flat_segment_tree_test
 install-sh
 ltmain.sh
@@ -27,38 +53,19 @@ missing
 multi_type_matrix_test
 multi_type_matrix_test_walk
 multi_type_vector_test_collection
-multi_type_vector_test_event
-multi_type_vector_test_side_iterator
 multi_type_vector_test_custom
 multi_type_vector_test_default
+multi_type_vector_test_event
 multi_type_vector_test_perf
+multi_type_vector_test_side_iterator
 point_quad_tree_test
+ref_pair_test
+rtree-test-*.svg
+rtree_test
+rtree_test_bulkload
 segment_tree_test
 sorted_string_map_test
 stlperf_test
 template_test
 test-driver
 trie_map_test
-rtree_test
-rtree_test_bulkload
-doc/_build
-doc/_doxygen
-example/flat-segment-tree
-example/flat-segment-tree-itrs
-example/mtv-collection
-example/multi-type-matrix
-example/multi-type-vector
-example/multi-type-vector-element-block1
-example/multi-type-vector-event1
-example/multi-type-vector-pos-hint
-example/packed-trie-map
-example/packed-trie-state-int
-example/point-quad-tree
-example/segment-tree
-example/trie-map
-example/rtree-simple
-example/rtree-erase
-example/rtree-medium
-example/rtree-medium-bulkload
-example/*.svg
-rtree-test-*.svg
