Fix the cmake build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,10 +29,6 @@ set(_TESTS
     flat-segment-tree-test
     multi-type-matrix-test
     multi-type-matrix-test-walk
-    multi-type-vector-test-collection
-    multi-type-vector-test-custom
-    multi-type-vector-test-default
-    multi-type-vector-test-event
     point-quad-tree-test
     segment-tree-test
     sorted-string-map-test
@@ -50,8 +46,42 @@ foreach(_TEST ${_TESTS})
 endforeach()
 
 add_executable(multi-type-vector-test-perf EXCLUDE_FROM_ALL
-    ${PROJECT_SOURCE_DIR}/src/multi_type_vector_test_perf.cpp
+    ${PROJECT_SOURCE_DIR}/src/multi_type_vector/perf/test_main.cpp
 )
+
+add_executable(multi-type-vector-test-collection EXCLUDE_FROM_ALL
+    ${PROJECT_SOURCE_DIR}/src/test_global.cpp
+    ${PROJECT_SOURCE_DIR}/src/multi_type_vector/collection/test_main.cpp
+)
+
+add_test(multi-type-vector-test-collection multi-type-vector-test-collection)
+
+add_executable(multi-type-vector-test-custom EXCLUDE_FROM_ALL
+    ${PROJECT_SOURCE_DIR}/src/test_global.cpp
+    ${PROJECT_SOURCE_DIR}/src/multi_type_vector/custom/test_main.cpp
+)
+
+add_test(multi-type-vector-test-custom multi-type-vector-test-custom)
+
+add_executable(multi-type-vector-test-default EXCLUDE_FROM_ALL
+    ${PROJECT_SOURCE_DIR}/src/test_global.cpp
+    ${PROJECT_SOURCE_DIR}/src/multi_type_vector/default/test_main.cpp
+    ${PROJECT_SOURCE_DIR}/src/multi_type_vector/default/test_construction.cpp
+    ${PROJECT_SOURCE_DIR}/src/multi_type_vector/default/test_basic.cpp
+)
+
+add_test(multi-type-vector-test-default multi-type-vector-test-default)
+
+target_include_directories(multi-type-vector-test-default PUBLIC
+    ${PROJECT_SOURCE_DIR}/src/multi_type_vector/default/tc
+)
+
+add_executable(multi-type-vector-test-event EXCLUDE_FROM_ALL
+    ${PROJECT_SOURCE_DIR}/src/test_global.cpp
+    ${PROJECT_SOURCE_DIR}/src/multi_type_vector/event/test_main.cpp
+)
+
+add_test(multi-type-vector-test-event multi-type-vector-test-event)
 
 add_executable(rtree-test EXCLUDE_FROM_ALL
     ${PROJECT_SOURCE_DIR}/src/test_global.cpp
@@ -77,10 +107,22 @@ add_executable(rtree-test-bulkload EXCLUDE_FROM_ALL
     ${PROJECT_SOURCE_DIR}/src/rtree/test_bulkload_main.cpp
 )
 
-add_dependencies(check
-    ${_TESTS}
+set(_CUSTOM_TESTS
+    multi-type-vector-test-collection
+    multi-type-vector-test-custom
+    multi-type-vector-test-default
+    multi-type-vector-test-event
     rtree-test
     rtree-test-bulkload
+)
+
+foreach(_TEST ${_CUSTOM_TESTS})
+    add_test(${_TEST} ${_TEST})
+endforeach()
+
+add_dependencies(check
+    ${_TESTS}
+    ${_CUSTOM_TESTS}
 )
 
 install(DIRECTORY
