--- a/Makefile.am
+++ b/Makefile.am
@@ -111,6 +111,7 @@ multi_type_vector_test_default_CPPFLAGS = \
 multi_type_vector_test_default_soa_SOURCES = \
 	src/multi_type_vector/default/soa/test_main.hpp \
 	src/multi_type_vector/default/soa/test_main.cpp \
+	src/multi_type_vector/default/soa/test_construction.cpp \
 	src/multi_type_vector/default/tc/construction.inl \
 	src/multi_type_vector/default/tc/basic.inl \
 	src/include/test_global.hpp \
