--- a/Makefile.am
+++ b/Makefile.am
@@ -98,11 +98,13 @@ multi_type_vector_test_default_SOURCES = \
 	src/multi_type_vector/default/test_construction.cpp \
 	src/multi_type_vector/default/test_basic.cpp \
 	src/multi_type_vector/default/test_empty_cells.cpp \
+	src/multi_type_vector/default/test_misc.cpp \
 	src/multi_type_vector/default/test_main.hpp \
 	src/multi_type_vector/default/test_main.cpp \
 	src/multi_type_vector/default/tc/construction.inl \
 	src/multi_type_vector/default/tc/basic.inl \
 	src/multi_type_vector/default/tc/empty_cells.inl \
+	src/multi_type_vector/default/tc/misc.inl \
 	src/include/test_global.hpp \
 	src/test_global.cpp
 
