Move mtv_test_insert_empty() into a separate compilation unit.

--- a/Makefile.am
+++ b/Makefile.am
@@ -99,6 +99,7 @@ multi_type_vector_test_default_SOURCES = \
 	src/multi_type_vector/default/test_basic.cpp \
 	src/multi_type_vector/default/test_empty_cells.cpp \
 	src/multi_type_vector/default/test_erase.cpp \
+	src/multi_type_vector/default/test_insert.cpp \
 	src/multi_type_vector/default/test_misc.cpp \
 	src/multi_type_vector/default/test_main.hpp \
 	src/multi_type_vector/default/test_main.cpp \
@@ -106,6 +107,7 @@ multi_type_vector_test_default_SOURCES = \
 	src/multi_type_vector/default/tc/basic.inl \
 	src/multi_type_vector/default/tc/empty_cells.inl \
 	src/multi_type_vector/default/tc/erase.inl \
+	src/multi_type_vector/default/tc/insert.inl \
 	src/multi_type_vector/default/tc/misc.inl \
 	src/include/test_global.hpp \
 	src/test_global.cpp
