--- a/Makefile.am
+++ b/Makefile.am
@@ -101,6 +101,7 @@ multi_type_vector_test_default_SOURCES = \
 	src/multi_type_vector/default/test_erase.cpp \
 	src/multi_type_vector/default/test_insert.cpp \
 	src/multi_type_vector/default/test_misc.cpp \
+	src/multi_type_vector/default/test_set.cpp \
 	src/multi_type_vector/default/test_main.hpp \
 	src/multi_type_vector/default/test_main.cpp \
 	src/multi_type_vector/default/tc/construction.inl \
@@ -109,6 +110,7 @@ multi_type_vector_test_default_SOURCES = \
 	src/multi_type_vector/default/tc/erase.inl \
 	src/multi_type_vector/default/tc/insert.inl \
 	src/multi_type_vector/default/tc/misc.inl \
+	src/multi_type_vector/default/tc/set.inl \
 	src/include/test_global.hpp \
 	src/test_global.cpp
 
