--- a/Makefile.am
+++ b/Makefile.am
@@ -101,6 +101,7 @@ multi_type_vector_test_default_SOURCES = \
 	src/multi_type_vector/default/test_erase.cpp \
 	src/multi_type_vector/default/test_insert.cpp \
 	src/multi_type_vector/default/test_iterators.cpp \
+	src/multi_type_vector/default/test_iterators_set.cpp \
 	src/multi_type_vector/default/test_misc.cpp \
 	src/multi_type_vector/default/test_set.cpp \
 	src/multi_type_vector/default/test_main.hpp \
@@ -111,6 +112,7 @@ multi_type_vector_test_default_SOURCES = \
 	src/multi_type_vector/default/tc/erase.inl \
 	src/multi_type_vector/default/tc/insert.inl \
 	src/multi_type_vector/default/tc/iterators.inl \
+	src/multi_type_vector/default/tc/iterators_set.inl \
 	src/multi_type_vector/default/tc/misc.inl \
 	src/multi_type_vector/default/tc/set.inl \
 	src/include/test_global.hpp \
@@ -129,6 +131,7 @@ multi_type_vector_test_default_soa_SOURCES = \
 	src/multi_type_vector/default/soa/test_erase.cpp \
 	src/multi_type_vector/default/soa/test_insert.cpp \
 	src/multi_type_vector/default/soa/test_iterators.cpp \
+	src/multi_type_vector/default/soa/test_iterators_set.cpp \
 	src/multi_type_vector/default/soa/test_misc.cpp \
 	src/multi_type_vector/default/soa/test_set.cpp \
 	src/include/test_global.hpp \
