Rename and move mtv_test_iterators_insert() into separate compilation unit.

--- a/Makefile.am
+++ b/Makefile.am
@@ -101,6 +101,7 @@ multi_type_vector_test_default_SOURCES = \
 	src/multi_type_vector/default/test_erase.cpp \
 	src/multi_type_vector/default/test_insert.cpp \
 	src/multi_type_vector/default/test_iterators.cpp \
+	src/multi_type_vector/default/test_iterators_insert.cpp \
 	src/multi_type_vector/default/test_iterators_set.cpp \
 	src/multi_type_vector/default/test_misc.cpp \
 	src/multi_type_vector/default/test_set.cpp \
@@ -112,6 +113,7 @@ multi_type_vector_test_default_SOURCES = \
 	src/multi_type_vector/default/tc/erase.inl \
 	src/multi_type_vector/default/tc/insert.inl \
 	src/multi_type_vector/default/tc/iterators.inl \
+	src/multi_type_vector/default/tc/iterators_insert.inl \
 	src/multi_type_vector/default/tc/iterators_set.inl \
 	src/multi_type_vector/default/tc/misc.inl \
 	src/multi_type_vector/default/tc/set.inl \
