Make sure the SoA variant passes all cases in mtv_test_iterators_insert().

--- a/Makefile.am
+++ b/Makefile.am
@@ -133,6 +133,7 @@ multi_type_vector_test_default_soa_SOURCES = \
 	src/multi_type_vector/default/soa/test_erase.cpp \
 	src/multi_type_vector/default/soa/test_insert.cpp \
 	src/multi_type_vector/default/soa/test_iterators.cpp \
+	src/multi_type_vector/default/soa/test_iterators_insert.cpp \
 	src/multi_type_vector/default/soa/test_iterators_set.cpp \
 	src/multi_type_vector/default/soa/test_misc.cpp \
 	src/multi_type_vector/default/soa/test_set.cpp \
