Rename and move mtv_test_iterators_set_empty() into own compilation unit.

--- a/Makefile.am
+++ b/Makefile.am
@@ -103,6 +103,7 @@ multi_type_vector_test_default_SOURCES = \
 	src/multi_type_vector/default/test_iterators.cpp \
 	src/multi_type_vector/default/test_iterators_insert.cpp \
 	src/multi_type_vector/default/test_iterators_set.cpp \
+	src/multi_type_vector/default/test_iterators_set_empty.cpp \
 	src/multi_type_vector/default/test_misc.cpp \
 	src/multi_type_vector/default/test_set.cpp \
 	src/multi_type_vector/default/test_main.hpp \
@@ -115,6 +116,7 @@ multi_type_vector_test_default_SOURCES = \
 	src/multi_type_vector/default/tc/iterators.inl \
 	src/multi_type_vector/default/tc/iterators_insert.inl \
 	src/multi_type_vector/default/tc/iterators_set.inl \
+	src/multi_type_vector/default/tc/iterators_set_empty.inl \
 	src/multi_type_vector/default/tc/misc.inl \
 	src/multi_type_vector/default/tc/set.inl \
 	src/include/test_global.hpp \
