--- a/Makefile.am
+++ b/Makefile.am
@@ -137,6 +137,7 @@ multi_type_vector_test_default_soa_SOURCES = \
 	src/multi_type_vector/default/soa/test_iterators.cpp \
 	src/multi_type_vector/default/soa/test_iterators_insert.cpp \
 	src/multi_type_vector/default/soa/test_iterators_set.cpp \
+	src/multi_type_vector/default/soa/test_iterators_set_empty.cpp \
 	src/multi_type_vector/default/soa/test_misc.cpp \
 	src/multi_type_vector/default/soa/test_set.cpp \
 	src/include/test_global.hpp \
