--- a/Makefile.am
+++ b/Makefile.am
@@ -135,6 +135,7 @@ multi_type_vector_test_default_soa_SOURCES = \
 	src/multi_type_vector/default/soa/test_basic.cpp \
 	src/multi_type_vector/default/soa/test_empty_cells.cpp \
 	src/multi_type_vector/default/soa/test_erase.cpp \
+	src/multi_type_vector/default/soa/test_hints.cpp \
 	src/multi_type_vector/default/soa/test_insert.cpp \
 	src/multi_type_vector/default/soa/test_iterators.cpp \
 	src/multi_type_vector/default/soa/test_iterators_insert.cpp \
