--- a/Makefile.am
+++ b/Makefile.am
@@ -108,6 +108,7 @@ multi_type_vector_test_default_SOURCES = \
 	src/multi_type_vector/default/test_misc.cpp \
 	src/multi_type_vector/default/test_position.cpp \
 	src/multi_type_vector/default/test_set.cpp \
+	src/multi_type_vector/default/test_swap_range.cpp \
 	src/multi_type_vector/default/test_main.hpp \
 	src/multi_type_vector/default/test_main.cpp \
 	src/multi_type_vector/default/tc/construction.inl \
@@ -123,6 +124,7 @@ multi_type_vector_test_default_SOURCES = \
 	src/multi_type_vector/default/tc/misc.inl \
 	src/multi_type_vector/default/tc/position.inl \
 	src/multi_type_vector/default/tc/set.inl \
+	src/multi_type_vector/default/tc/swap_range.inl \
 	src/include/test_global.hpp \
 	src/test_global.cpp
 
