Set up test program for SoA variant for custom category.

--- a/Makefile.am
+++ b/Makefile.am
@@ -55,6 +55,7 @@ check_PROGRAMS = \
 	multi_type_matrix_test_walk \
 	multi_type_vector_test_event \
 	multi_type_vector_test_custom_aos \
+	multi_type_vector_test_custom_soa \
 	multi_type_vector_test_default_aos \
 	multi_type_vector_test_default_soa \
 	multi_type_vector_test_perf \
@@ -98,6 +99,19 @@ multi_type_vector_test_custom_aos_SOURCES = \
 	src/test_global.cpp
 
 multi_type_vector_test_custom_aos_CPPFLAGS = \
+	-I$(top_srcdir)/src/multi_type_vector/custom \
+	-I$(top_srcdir)/src/multi_type_vector/custom/tc \
+	$(AM_CPPFLAGS)
+
+multi_type_vector_test_custom_soa_SOURCES = \
+	src/multi_type_vector/custom/soa/test_main.hpp \
+	src/multi_type_vector/custom/soa/test_main.cpp \
+	src/multi_type_vector/custom/soa/test_misc.cpp \
+	src/multi_type_vector/custom/tc/misc.inl \
+	src/include/test_global.hpp \
+	src/test_global.cpp
+
+multi_type_vector_test_custom_soa_CPPFLAGS = \
 	-I$(top_srcdir)/src/multi_type_vector/custom \
 	-I$(top_srcdir)/src/multi_type_vector/custom/tc \
 	$(AM_CPPFLAGS)
@@ -257,6 +271,7 @@ TESTS = \
 	multi_type_matrix_test_walk \
 	multi_type_vector_test_event \
 	multi_type_vector_test_custom_aos \
+	multi_type_vector_test_custom_soa \
 	multi_type_vector_test_default_aos \
 	multi_type_vector_test_default_soa \
 	multi_type_vector_test_collection \
