Move mtv_test_basic() into basic.inl and run it for both variants.

--- a/Makefile.am
+++ b/Makefile.am
@@ -93,7 +93,9 @@ multi_type_vector_test_event_SOURCES = \
 multi_type_vector_test_custom_aos_SOURCES = \
 	src/multi_type_vector/custom/aos/test_main.hpp \
 	src/multi_type_vector/custom/aos/test_main.cpp \
+	src/multi_type_vector/custom/soa/test_basic.cpp \
 	src/multi_type_vector/custom/aos/test_misc.cpp \
+	src/multi_type_vector/custom/tc/basic.inl \
 	src/multi_type_vector/custom/tc/misc.inl \
 	src/include/test_global.hpp \
 	src/test_global.cpp
@@ -106,8 +108,8 @@ multi_type_vector_test_custom_aos_CPPFLAGS = \
 multi_type_vector_test_custom_soa_SOURCES = \
 	src/multi_type_vector/custom/soa/test_main.hpp \
 	src/multi_type_vector/custom/soa/test_main.cpp \
+	src/multi_type_vector/custom/soa/test_basic.cpp \
 	src/multi_type_vector/custom/soa/test_misc.cpp \
-	src/multi_type_vector/custom/tc/misc.inl \
 	src/include/test_global.hpp \
 	src/test_global.cpp
 
