Add memory test for the SoA variant (for the custom test).

--- a/configure.ac
+++ b/configure.ac
@@ -146,6 +146,7 @@ multi_type_matrix_test_mem.mem:src/test.mem.in
 multi_type_matrix_test_walk_mem.mem:src/test.mem.in
 multi_type_vector_test_event_mem.mem:src/test.mem.in
 multi_type_vector_test_custom_aos_mem.mem:src/test.mem.in
+multi_type_vector_test_custom_soa_mem.mem:src/test.mem.in
 multi_type_vector_test_default_aos_mem.mem:src/test.mem.in
 multi_type_vector_test_default_soa_mem.mem:src/test.mem.in
 multi_type_vector_test_collection_mem.mem:src/test.mem.in
